cluster/flux-system/flux-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: flux-ingress
  namespace: flux-system
spec:
  rules:
  - host: flux-receiver.bergmann.click
    http:
      paths:
      - backend:
          service:
            name: webhook-receiver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flux-receiver.bergmann.click
    secretName: flux-receiver-cert
